Add SigtermShutdownCleanupService